pgcenter (development) unstable; urgency=low

  * fix crash when switching with empty previous results.
  * add pg_stat_statements for 9.0, 9.1.
  * add pg_stat_database, pg_stat_activity for 9.0, 9.1.
  * add postgres uptime.
  * fix parameters moving when console closed.
  * add pg version output in sysstat section.
  * fix broken multiple connections when log_min_duration_statement issued.
  * remove DEFAULT_HOST, DEFAULT_PORT; use libpq default behaviour.
  * improve add_connection(): reset counters, remove unnecessary vars.
 
 -- Alexey Lesovsky <lesovsky@gmail.com>  Sun, 28 Aug 2015 14:27:07 +0500

pgcenter (0.1.2) unstable; urgency=low
  * Improve do_query() func.
  * Set log_min_duration_statement = 10000 for used connections.
  * Improve log tail, add header, store log location in screen struct.
  * Wrap routines into switch_context() function.
  * Remove -O2 from Makefile, because unknown garbage appeared with log tail.
  * Fix: clear taillog screen before closing.
  * Add Makefile, manpage, license.
  * Fix ncurses mode break after edit/show config or log.
  * Add reset statistics hotkey.
  * Show tables/indexes from system view on/off toggle.
  * Split pg_stat_statements screen to timings and general screens.
  * Rewrite pg_stat_statements query with human readable timings.
  * Write conninfo into file from --file=... or to default.
  * Add desc/asc sort order changing.
  * Allow specify connections file with --file option.
  * Rewrite arg parse and init_conn funcs.
  * Add pg_stat_statements to sys screen.
  * Add colors support.
  * Add log tail screen, full log view with PAGER.
  * Add suspend/resume pgcenter execution.
  * Allow change refresh interval.
  * Add psql hotkey.
  * Add reconnect if conn failed (eg pg restart).
  * Add cancel/terminate for process group.
  * Add infrastructure for cancel/terminate group of backends.
  * Add single backend cancel or terminate.
  * Add return error message in higher function from do_query.